[tool.poetry]
name = "efficientzero"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
ray = "^2.31.0"
gymnasium = {extras = ["accept-rom-license", "atari", "roms"], version = "^0.29.1"}
Cython = "^3.0.10"
tensorboard = "^2.17.0"
opencv-python = "^4.10.0.84"
kornia = "^0.7.2"
ale-py = {git = "git@github.com:Farama-Foundation/Arcade-Learning-Environment.git", rev = "v0.8.1"}
jupyterlab = "^4.2.3"
notebook = "^7.2.1"
ipykernel = "^6.29.4"
scipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
